<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_radio_title">Glide - Image Loading Library by BumpTech</string>
    <string name="load_app_radio_title">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_radio_title">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="download">Download</string>
    <string name="status_title">"Status:</string>
    <string name="file_name_title">File name:</string>
    <string name="download_status_fail">Fail</string>
    <string name="download_status_success">Success</string>
    <string name="download_status_unknown">Unknown</string>
    <string name="ok">OK</string>
    <string name="select_download_file_message">Please select the file to download</string>
</resources>
